--- a/style.css
+++ b/style.css
@@ -8,12 +8,16 @@ header {
   text-align: center;
 }
 
-#featured-property {
-  text-align: center;
+img {
+  margin: auto;
 }
 
 a {
   padding-left: 10px;
   padding-right: 10px;
   background-color: yellow;
+}
+
+figcaption {
+  
 }
