--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ header {
   text-align: center;
 }
 
-/*section {
-  text-align: center;
-}*/
+img {
+  align-items: center;
+}
 
 a {
   padding-left: 10px;
