--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ figcaption {
 #details div{
   background-color: red;
   display: block;
-  width: fill;
+  width: auto;
   float: left;
   margin-left: auto;
   margin-right: auto;
