--- a/style.css
+++ b/style.css
@@ -30,11 +30,16 @@ figcaption {
   margin: auto;
 }
 
+#details {
+  display: block;
+  float: left;
+}
+
 #details div{
   background-color: red;
-  display: block;
+
   width: 25%;
-  float: left;
+
   margin-left: auto;
   margin-right: auto;
   text-align: center;
